added gallary link

--- a/gallary.html
+++ b/gallary.html
@@ -12,7 +12,7 @@
             <div class="container">
                 <div class=row>
                     <div class="span9">
-    		          <h1> Emily </h1>
+    		          <h1> Emily DellaValle </h1>
                     </div>
                 <div class="span3">
                 <ul> 
@@ -24,7 +24,7 @@
             <div class="row">
                     <div class="span12">
                        <a href="bio.html"> 
-                            <a href="gallary.html"> <img src="img/dsc_0430.jpg"> </a>
+                            Gallary
                     </div>
                     <div class="row">
                         <div class="span12">
