--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
     <!DOCTYPE html>
     <html>
         <head>
-            <title>Bio</title>
+            <title>Contact</title>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link href="css/bootstrap.css" rel="stylesheet">
              <link href="css/bootstrap-responsive.css" rel="stylesheet">
@@ -15,21 +15,14 @@
                         <div class="navbar-inner">
                             <a class="brand" href="index.html">Emily DellaValle</a>
                             <ul class="nav">
-                                <li> <a href="index.html">Index</a> </li>
+                                <li> <a href="index.html">Index</a></li>
                                 <li> <a href="gallery.html">Gallery</a> </li>
-                                <li class="active"> <a href="bio.html">Bio</a> </li>
-                                <li> <a href="Contact.html">Contact</a> </li>
+                                <li> <a href="bio.html">Bio</a> </li>
+                                <li class="active"> <a href="Contact.html">Contact</a> </li>
                             </ul>
-                            <div class="row">
-                                <div class="span6"> <div class="bio">
-                                    <div class=""
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="row"
-            </div>
             </div>
         </body>
     </html>
