--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
     <!DOCTYPE html>
     <html>
     	<head>
-    		<title>Bootstrap 101 Template</title>
+    		<title>Index</title>
     		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     		<link href="css/bootstrap.css" rel="stylesheet">
    			 <link href="css/bootstrap-responsive.css" rel="stylesheet">
@@ -9,29 +9,46 @@
                 <link href='http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy' rel='stylesheet' type='text/css'>
          </head>
    		 <body>
-            <div class="container">
-                <div class=row>
-                    <div class="span9">
-    		          <h1> Emily </h1>
-                    </div>
-                <div class="span3">
-                <ul> 
-            </div>
-                <li> (914) 471 3368 </li>
-                <li> Emdelll@ymail.com </li>
-            </ul>
-            </div>
-            <div class="row">
-                    <div class="span12">
-                       <a href="bio.html"> 
-                            <a href="gallary.html"> <img src="img/dsc_0430.jpg"> </a>
-                    </div>
-                    <div class="row">
-                        <div class="span12">
+           <div class="container"> 
+                <div class="row">
+                    <div class="span12"> 
+                        <div class="navbar">
+                            <div class="navbar-inner">
+                                <a class="brand" href="index.html">Emily DellaValle</a>
+                                <ul class="nav">
+                                    <li class="active"> <a href="index.html">Index</a> </li>
+                                    <li> <a href="gallery.html">Gallery</a> </li>
+                                    <li> <a href="bio.html">Bio</a> </li>
+                                    <li> <a href="Contact.html">Contact</a> </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
-            <small> Copyright 2013 </small>
+                <div class="row">
+                    <div class="span12">
+                                <a class="brand" href="index.html">
+                                    <h1> Index </h1>
+                                </a>
+                                <ul class="index">
+                                    <li class="active"> 
+                                        <a href="index.html">
+                                        <h4>Work</h4>
+                                        </a>
+                                    </li>
+                                        <a href="index.html">
+                                        <h4>History</h4>
+                                        <a> </li>
+                                </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="span12">
+                        <div class="Info" href="index.html">
+                            <h4 class="pull-right"> Info </h4>
 
+                    </div>
+                </div>
+            </div>
     	</body>
     </html>
